hphp/test/vm/on_list_assign.php.exp
HipHop Fatal error: Can't use return value in write context in hphp/test/vm/on_list_assign.php on line 12
